--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "socialiteproviders/google": "^4.1",
         "socialiteproviders/vkontakte": "^5.0"
     },
     "require-dev": {
